# 19-forensics-disk-carver

./: Cargo.toml  README.md
src/: carver.rs  cli.rs  disk_reader.rs  file_types.rs  fs_parser.rs  main.rs  mmap_reader.rs  progress.rs  simd_search.rs
