[package]
name = "disk-carver"
version = "1.0.0"
edition = "2021"
description = "跨平台磁盘恢复命令行工具 - 用于网络警察和取证专家"
license = "MIT"

[[bin]]
name = "disk-carver"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive", "color"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
colored = "2.1.0"
rayon = "1.10.0"
memchr = "2.7.4"
byteorder = "1.5.0"
anyhow = "1.0.82"
thiserror = "1.0.61"
comfy-table = "7.1.1"
num_cpus = "1.16.0"
md5 = "0.7.0"
sha2 = "0.10.8"
hex = "0.4.3"
walkdir = "2.5.0"
flate2 = "1.0.30"
parking_lot = "0.12.3"
chrono = "0.4.38"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
